concrete-shortint/mmm
   Compiling concrete-shortint v0.1.0-beta.0 (/Users/loris/Desktop/Zama/Concrete/concrete/concrete-shortint)
warning: unused import: `concrete_shortint::wopbs::*`
 --> concrete-shortint/benches/bench.rs:7:5
  |
7 | use concrete_shortint::wopbs::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
   --> concrete-shortint/benches/bench.rs:147:9
    |
147 |     let (cks, sks, wopbs_key) = KEY_CACHE_WOPBS.get_from_param(param);
    |         ^^^^^^^^^^^^^^^^^^^^^   ------------------------------------- this expression has type `SharedWopbsKey`
    |         |
    |         expected struct `SharedWopbsKey`, found tuple
    |
    = note: expected struct `SharedWopbsKey`
                found tuple `(_, _, _)`

For more information about this error, try `rustc --explain E0308`.
warning: `concrete-shortint` (bench "bench") generated 1 warning
error: could not compile `concrete-shortint` due to previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
warning: variable does not need to be mutable
   --> concrete-shortint/src/wopbs/test.rs:261:13
    |
261 |         let mut message_modulus = MessageModulus(param.message_modulus.0 - 1);
    |             ----^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

